<resources>
    <string name="app_name">Whack a mole</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timer">Timer:</string>
    <string name="score">Score:</string>
    <string name="your_scored">Your scored:</string>
    <string name="best_result">Best result:</string>
    <string name="menu">Menu</string>
    <string name="play_again">Play again</string>
    <string name="play">Play</string>
    <string name="about_game">"Text about Game Text about Game Text about Game Text about Game Text about Game Text about Game Text about Game Text about Game Text about Game Text about Game Text about Game Text about GameText about Game Text about Game Text about Game"</string>
    <string name="about_game_label">About game:</string>
</resources>